[tool.poetry]
name = "project-2-evdokimov-25555"
version = "0.1.0"
description = "Минималистичная файловая СУБД с управлением схемой, CRUD-операциями, хранением данных в JSON и консольным выводом через PrettyTable."
authors = ["Alexander Evdokimov <a.evdokimof135@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
